--- a/ProjetoWeb/quizfrozen.html
+++ b/ProjetoWeb/quizfrozen.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+      <img src="frozen.png" alt="frozen" width="400px" height="300px" >
+
     <hr>
     <h1>Questão 1</h1>
     <h2>Qual dessas palavras mais te descreve?</h2>
