--- a/ProjetoWeb/quizfrozen.html
+++ b/ProjetoWeb/quizfrozen.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<div id="pai">
       <img src="frozen.png" alt="frozen" width="400px" height="300px" >
 
     <hr>
@@ -112,7 +112,7 @@
     <button onclick="testar()">RESULTADO</button>
     <h1 id="resultado"></h1>
 
-
+</div>
 
 
 </body>
